[package]
name = "ol-sysinfo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
omni-led-api = { path = "/home/gr1n/git/OmniLED/omni-led-api" }
sysinfo = "0.37.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
